# market_analyzer

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: run_daily.yml
data/: email_preview.html
docs/: DEPLOYMENT.md
notebooks/: market_analyzer_colab.ipynb
scripts/: migrate_news_columns.py  quick_test.py  register_task.ps1  run_daily.py  setup_db.py  test_all.py  test_email.py
src/: __init__.py  config.py
src/analyzers/: __init__.py  fundamental_analyzer.py  llm_analyzer.py  sentiment_analyzer.py  technical_analyzer.py
src/collectors/: __init__.py  macro_collector.py  news_collector.py  stock_collector.py
src/database/: __init__.py  models.py
src/reports/: __init__.py  email_notifier.py  report_generator.py
src/scoring/: __init__.py  recommender.py  scorer.py
